action plan page added

--- a/public/about.html
+++ b/public/about.html
@@ -190,23 +190,23 @@
 
 <section class="bg-black-50 font-mukta pt-32 pb-16">
     <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg text-xl shadow">
-      <h3 class="font-mukta font-extrabold text-5xl mb-6 py-4">हाम्रो बारेमा</h3>
+      <h3 class="font-mukta font-bold text-4xl mb-6 py-4">हाम्रो बारेमा</h3>
       <div class="space-y-4 text-xl">
         <p class="max-w-[100ch]">विविध बस्तु तथा क्षेत्र हरुमा राष्ट्रिय तथा अन्तर्राष्ट्रिय स्तरमा ब्यापार, ब्यापार प्रबर्द्धन, र ब्यवस्थापन गर्ने प्रमुख उदेश्यका साथ मिति २०७३कार्तिक २६ गते कम्पनी रजिस्ट्रार कार्यलयमा दर्ता भई संचालनमा आएको कम्पनी हो बिश्वकर्मा टेडिङ्ग एण्ड प्रमोटर्स प्रा.लि. । यस कम्पनीको एक मात्र संचालक इ.सन्जुक्ता सुनार हुनुहुन्छ । कम्पनीको मुख्य कार्यलय हाल बुटवल -११ रुपन्देही मा रहेको छ।</p>
         <h4 class="font-bold max-w-[100ch]">कम्पनीले निम्नलिखित बस्तु तथा क्षेत्रहरुमा आफ्नो ब्यापार र उद्योग संचालन गर्न सक्ने छ ।</h4>
         <ol class="list-decimal list-outside pl-8 space-y-2">
-          <li>दैनिक उपभोग्य खाद्यन्न किराना तथा गल्ला ।</li>
-          <li>हल्का पेय पदार्थ तथा वेभरेज ।</li>
-          <li>मदिरा जन्य चुरोट तथा सुर्तीजन्य ।</li>
-          <li>विभिन्न फेसन सामाग्री तथा सौन्दर्य प्रशाधन ।</li>
-          <li>जुत्ता चप्पल तथा गार्मेन्टेस र सिलाई सामाग्री ।</li>
-          <li>इलेक्ट्रोनिक तथा इलेक्टि्रकल घरायसी सामाग्री ।</li>
-          <li>फर्निचर तथा अन्य किचन वेयर शेनेटरी सामग्री ।</li>
-          <li>कम्प्युटर कम्प्युटर पार्ट्स, मोबाइल , मोबाईल एप ,तथा मोबाइल एशोसिरिज ।</li>
-          <li>विभिन्न साइकल, मोटरसाइकल ,साना मझौला तथा हेवि मोटर गाडीहरु ।</li>
-          <li>हाडवेयर तथा सबै खाले निर्माण सामाग्री ।</li>
-          <li>कृषि ,कृषि जन्य बस्तु सेवा तथा पर्यटन ।</li>
-          <li>घर जग्गा तथा सम्पूर्ण रियल स्टेट सम्बन्धि काम हरु ।</li>
+          <li class="pl-2">दैनिक उपभोग्य खाद्यन्न किराना तथा गल्ला ।</li>
+          <li class="pl-2">हल्का पेय पदार्थ तथा वेभरेज ।</li>
+          <li class="pl-2">मदिरा जन्य चुरोट तथा सुर्तीजन्य ।</li>
+          <li class="pl-2">विभिन्न फेसन सामाग्री तथा सौन्दर्य प्रशाधन ।</li>
+          <li class="pl-2">जुत्ता चप्पल तथा गार्मेन्टेस र सिलाई सामाग्री ।</li>
+          <li class="pl-2">इलेक्ट्रोनिक तथा इलेक्टि्रकल घरायसी सामाग्री ।</li>
+          <li class="pl-2">फर्निचर तथा अन्य किचन वेयर शेनेटरी सामग्री ।</li>
+          <li class="pl-2">कम्प्युटर कम्प्युटर पार्ट्स, मोबाइल , मोबाईल एप ,तथा मोबाइल एशोसिरिज ।</li>
+          <li class="pl-2">विभिन्न साइकल, मोटरसाइकल ,साना मझौला तथा हेवि मोटर गाडीहरु ।</li>
+          <li class="pl-2">हाडवेयर तथा सबै खाले निर्माण सामाग्री ।</li>
+          <li class="pl-2">कृषि ,कृषि जन्य बस्तु सेवा तथा पर्यटन ।</li>
+          <li class="pl-2">घर जग्गा तथा सम्पूर्ण रियल स्टेट सम्बन्धि काम हरु ।</li>
         </ol>
       </div>
       <div class="space-y-4 mt-6 text-xl">
@@ -217,10 +217,10 @@
       </div>
       <h4 class="font-bold mt-6 mb-2">यसैगरी क्रमिक रुपमा पुंजी वृद्धि गर्दै कम्पनी लाई पब्लिक लिमिटेडमा परिणत गरिने छ र उल्लेखित विभिन्न योजनाहरुको स्थापना र संचालन गरिदै लगिने छ । यस बि.के. पि स्टोरले आफ्नो वेबसाईट मार्फत आफ्न ग्राहक हरु लाई निम्न लिखित सेवा प्रदान गर्नेछ ।</h4>
       <ol class="list-decimal list-outside pl-8 space-y-2">
-        <li>दैनिक उपभोग्य किराना सामाग्री हरुको अडर अनुसार सर्व सुलभ ढंगबाट डेलिभरी दिनेछ ।</li>
-        <li>खाद्यान्न तथा गल्ला सामान हरुको अडर अनुसार सर्व सुलभ ढंगबाट डेलिभरी दिइनेछ ।</li>
-        <li>समय समयमा आकर्षक बिक्री योजना छुट तथा वोनोस उपहार दिइनेछ ।</li>
-        <li>नयाँ उत्पादन हरु लाई आफ्नो वेबसाईट मा राखी बिज्ञापन तथा ब्यापार ब्यबस्थापन गर्नेछ ।</li>
+        <li class="pl-2">दैनिक उपभोग्य किराना सामाग्री हरुको अडर अनुसार सर्व सुलभ ढंगबाट डेलिभरी दिनेछ ।</li>
+        <li class="pl-2">खाद्यान्न तथा गल्ला सामान हरुको अडर अनुसार सर्व सुलभ ढंगबाट डेलिभरी दिइनेछ ।</li>
+        <li class="pl-2">समय समयमा आकर्षक बिक्री योजना छुट तथा वोनोस उपहार दिइनेछ ।</li>
+        <li class="pl-2">नयाँ उत्पादन हरु लाई आफ्नो वेबसाईट मा राखी बिज्ञापन तथा ब्यापार ब्यबस्थापन गर्नेछ ।</li>
       </ol>
     </div>
 </section>
