--- a/public/contact.html
+++ b/public/contact.html
@@ -187,33 +187,41 @@
       <div class="sm:col-span-3 text-black-700 bg-red-50 p-4 sm:p-0 rounded-md sm:bg-white flex flex-col items-start justify-between">
         <h2 class="text-2xl mb-4 sm:mb-0">We love to hear <br>from you</h2>
         <div class="text-gray-700">
-          <h3 class="text-xl text-gray-800">We are at</h3>
-          <p class="my-2 flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
-            </svg>
-            <span>
+          <h3 class="text-xl text-gray-700 font-semibold mb-2">We are at</h3>
+          <div>
+            <div class="flex gap-3 items-center font-semibold">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd" />
+              </svg>
+              <span>Location</span>
+            </div>
+            <p class="ml-8">
               Butwal-11 Buddhanagar,<br> Rupendahi, Nepal
-            </span>
-          </p>
-          <p class=" my-2 flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M14.414 7l3.293-3.293a1 1 0 00-1.414-1.414L13 5.586V4a1 1 0 10-2 0v4.003a.996.996 0 00.617.921A.997.997 0 0012 9h4a1 1 0 100-2h-1.586z" />
-              <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
-            </svg>
-            <a class="hover:text-blue-700 underline text-sm" href="tel:+9779857039526">9857039526</a>
-          </p>
-          <p class=" flex items-center gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-              <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
-              <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
-            </svg>
-          <a class="hover:text-blue-700 hover:underline"
+            </p>
+          </div>
+          <div class="py-3">
+            <div class="flex gap-3 items-center font-semibold">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
+              </svg>
+              <span>Phone</span>
+            </div>
+            <a class="hover:text-blue-700 underline text-sm ml-8" href="tel:+9779857039526">9857039526</a>
+          </div>
+          <div>
+            <div class="flex gap-3 items-center font-semibold">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
+                <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
+              </svg>
+              <span>Email</span>
+            </div>
+          <a class="hover:text-blue-700 hover:underline ml-8"
             href="mailto: administration@bkpnepal.com">administration@bkpnepal.com</a>
-          </p>
+          </div>
           </div>
           <div class="flex flex-col">
-            <h3 class="text-xl text-gray-800 my-4">Reach us via</h3>
+            <h3 class="text-xl text-gray-700 font-semibold my-3">Reach us via</h3>
             <div class="flex flex-row gap-4">
               <!-- faccebook icon -->
               <a class="float-left" href="#" target="_blank">
@@ -245,7 +253,7 @@
       </div>
 
       <div class="row-start-1 sm:row-auto sm:col-span-3">
-        <h3 class="text-2xl mb-4">Send us message</h3>
+        <h3 class="text-2xl mb-4">Send us a message</h3>
         <form action="">
           <label class="mb-4 block" for="fullname">
             <input class="input" type="text" name="fullname" id="fullname" placeholder="Full Name" required />
