--- a/public/index.html
+++ b/public/index.html
@@ -190,15 +190,16 @@
 
   <!-- hero section -->
   <section
-    class="w-full bg-[url('https://images.unsplash.com/photo-1519719498756-2f0d81cdf13b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto')] bg-fixed bg-no-repeat bg-cover">
+    class="w-full bg-[url('../images/hero1.jpg')] bg-fixed bg-no-repeat bg-cover bg-bottom">
     <div
       class="w-full min-h-[100vh] bg-black bg-opacity-75 flex flex-col justify-center items-center ">
-      <h1 class="mt-8 py-2 text-transparent bg-clip-text bg-gradient-to-br from-white via-gray-50 to-brand-700 text-center text-4xl md:text-6xl font-mukta font-black md:max-w-xl">जीवन बदल्ने साझा
-        मंचमा हजुरलाई स्वागत छ।</h1>
+      <h1 class="mt-8 py-2 text-transparent bg-clip-text bg-gradient-to-br from-white via-gray-50 to-brand-700 text-center text-4xl md:text-6xl font-mukta font-black md:max-w-xl" style="line-height: 1.2;">जीवन बदल्ने साझा
+        मंचमा<br>हजुरलाई स्वागत छ।</h1>
       <div>
         <button
-          class="text-white text-md md:text-2xl bg-brand  hover:bg-brand-800 mt-4 md:mt-8 px-6 py-2 rounded-md focus:outline  focus:outline-4 focus:outline-brand-200 focus:outline-offset-2">Become
-          a member</button>
+          class="text-white text-md md:text-2xl bg-brand  hover:bg-brand-800 mt-4 md:mt-8 px-6 py-2 rounded-md focus:outline  focus:outline-2 focus:outline-brand-200 focus:outline-offset-2">Become
+          a member
+      </button>
       </div>
     </div>
   </section>
@@ -233,7 +234,7 @@
   <!-- about us section -->
   <section class="bg-white">
     <div class="section font-mukta" data-aos="slide-right">
-      <h3  class="text-center md:text-left text-3xl font-extrabold underline underline-offset-2 decoration-brand-800">हाम्रो बारेमा</h3>
+      <h3  class="text-4xl font-bold">हाम्रो बारेमा</h3>
       <p class="my-6 text-xl md:max-w-3xl leading-relaxed md:font-normal text-black-600">विविध बस्तु तथा क्षेत्र हरुमा राष्ट्रिय तथा अन्तर्राष्ट्रिय स्तरमा ब्यापार, ब्यापार प्रबर्द्धन, र ब्यवस्थापन गर्ने प्रमुख उदेश्यका साथ मिति २०७३कार्तिक २६ गते कम्पनी रजिस्ट्रार कार्यलयमा दर्ता भई संचालनमा आएको कम्पनी हो बिश्वकर्मा टेडिङ्ग एण्ड प्रमोटर्स प्रा.लि. । यस कम्पनीको एक मात्र संचालक इ.सन्जुक्ता सुनार हुनुहुन्छ । कम्पनीको मुख्य कार्यलय हाल बुटवल -११ रुपन्देही मा रहेको छ।</p>
       <a href="about.html" class="bg-brand text-sm text-white hover:bg-brand-800 rounded-full px-6 py-1">पुरा पढ्नुस</a>
     </div>
@@ -244,7 +245,7 @@
 <!-- hamro mantra section -->
   <section class="bg-white border-t border-t-black-50" >
     <div class="section" data-aos="fade-in">
-      <h3 class="font-mukta text-center sm:text-left text-3xl font-extrabold underline underline-offset-2 decoration-brand-800">हाम्रो मन्त्र</h3>
+      <h3 class="text-black-800 font-mukta text-4xl font-bold">हाम्रो मन्त्र</h3>
       <div class="grid md:grid-cols-3 gap-8 mt-8 text-xl font-semibold">
         <div class="bg-black-50 p-4 rounded-lg shadow-sm">
           <img class="p-8" src="https://cdn-icons.flaticon.com/png/512/756/premium/756740.png?token=exp=1648019459~hmac=53ffa2a8f85db2f951c43d78e9fbb7e1" alt="teamwork">
