--- a/public/upcoming-projects.html
+++ b/public/upcoming-projects.html
@@ -1,24 +1,5 @@
 <!doctype html>
 <html>
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=Mukta:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <title>BKP Nepal | Upcoming Projects | Life Changing Platform </title>
-</head>
-
-<body class="bg-[#fff] font-fredoka antialiased text-gray-700">
-  <!doctype html>
-  <html>
-  
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -208,7 +189,7 @@
   
 <section class="bg-black-50 pt-32 pb-16">
     <div class="max-w-5xl mx-auto bg-white p-8 pb-16 rounded-lg text-xl shadow">
-        <h3 class="font-mukta font-extrabold text-5xl my-8 pb-4">भावी परियोजना</h3>
+        <h3 class="font-mukta font-bold text-4xl my-8 pb-4">भावी परियोजना</h3>
         <div class="grid gap-6 md:grid-cols-3">
             <div class=" h-60 transition duration-500 ease-in-out rounded-xl hover:rounded-3xl overflow-hidden bg-[url('https://images.unsplash.com/photo-1540340061722-9293d5163008?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80')] bg-cover bg-center">
                 <div class="w-full h-full transition duration-300 ease-in-out bg-black bg-opacity-75 hover:bg-opacity-50 flex flex-col justify-center items-center">
