--- a/public/about.html
+++ b/public/about.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=Mukta:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=natosans:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -22,19 +22,13 @@
         <img src="images/bkp-nepal-logo.svg" alt="" srcset="">
       </a>
       <nav class="hidden lg:block">
-        <ul class="flex items-center text-sm uppercase space-x-0 text-gray-800">
-          <li><a class="nav-links"
-              href="/">Home</a></li>
-          <li><a class="nav-links"
-              href="action-plan.html">Action Plan</a></li>
-          <li><a class="nav-links"
-              href="membership-type.html">Membership Type</a></li>
-          <li><a class="nav-links"
-              href="upcoming-projects.html">Upcoming Projects</a></li>
-          <li><a class="nav-links"
-              href="about.html">About us</a></li>
-          <li><a class="nav-links"
-              href="contact.html">Contact us</a></li>
+        <ul class="flex items-center text-sm space-x-0 text-gray-800">
+          <li><a class="nav-links" href="/">Home</a></li>
+          <li><a class="nav-links" href="action-plan.html">Action Plan</a></li>
+          <li><a class="nav-links" href="membership-type.html">Register</a></li>
+          <li><a class="nav-links" href="upcoming-projects.html">Upcoming Projects</a></li>
+          <li><a class="nav-links" href="about.html">About us</a></li>
+          <li><a class="nav-links" href="contact.html">Contact us</a></li>
         </ul>
       </nav>
       <button class="menu hover:bg-black-50 rounded-full p-2 lg:hidden">
@@ -134,7 +128,7 @@
               d="M7.21454 8.49989C6.56991 8.20454 5.85992 8.09097 5.10743 8.09097C3.25031 8.09097 1.46106 9.01417 1.01285 10.8124C0.953921 11.0502 1.1032 11.2856 1.34749 11.2856H5.35743"
               stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" />
           </svg>
-          <span>Membership Type</span>
+          <span>Register</span>
         </a>
         <a class="hover:bg-black-50 text-black-700 hover:text-black-800 rounded-md transition-all text-lg font-medium flex items-center space-x-4 p-2"
           href="upcoming-projects.html">
@@ -188,12 +182,16 @@
     <!-- end mobile off canvas side nav -->
   </div>
 
-<section class="bg-black-50 font-mukta pt-32 pb-16">
+  <section class="bg-black-50 font-natosans pt-32 pb-16">
     <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg text-xl shadow">
-      <h3 class="font-mukta font-bold text-4xl mb-6 py-4">हाम्रो बारेमा</h3>
-      <div class="space-y-4 text-xl">
-        <p class="max-w-[100ch]">विविध बस्तु तथा क्षेत्र हरुमा राष्ट्रिय तथा अन्तर्राष्ट्रिय स्तरमा ब्यापार, ब्यापार प्रबर्द्धन, र ब्यवस्थापन गर्ने प्रमुख उदेश्यका साथ मिति २०७३कार्तिक २६ गते कम्पनी रजिस्ट्रार कार्यलयमा दर्ता भई संचालनमा आएको कम्पनी हो बिश्वकर्मा टेडिङ्ग एण्ड प्रमोटर्स प्रा.लि. । यस कम्पनीको एक मात्र संचालक इ.सन्जुक्ता सुनार हुनुहुन्छ । कम्पनीको मुख्य कार्यलय हाल बुटवल -११ रुपन्देही मा रहेको छ।</p>
-        <h4 class="font-bold max-w-[100ch]">कम्पनीले निम्नलिखित बस्तु तथा क्षेत्रहरुमा आफ्नो ब्यापार र उद्योग संचालन गर्न सक्ने छ ।</h4>
+      <h3 class="font-semibold text-4xl mb-6 py-4">हाम्रो बारेमा</h3>
+      <div class="space-y-4">
+        <p class="max-w-[100ch]">विविध बस्तु तथा क्षेत्र हरुमा राष्ट्रिय तथा अन्तर्राष्ट्रिय स्तरमा ब्यापार, ब्यापार
+          प्रबर्द्धन, र ब्यवस्थापन गर्ने प्रमुख उदेश्यका साथ मिति २०७३कार्तिक २६ गते कम्पनी रजिस्ट्रार कार्यलयमा दर्ता
+          भई संचालनमा आएको कम्पनी हो बिश्वकर्मा टेडिङ्ग एण्ड प्रमोटर्स प्रा.लि. । यस कम्पनीको एक मात्र संचालक
+          इ.सन्जुक्ता सुनार हुनुहुन्छ । कम्पनीको मुख्य कार्यलय हाल बुटवल -११ रुपन्देही मा रहेको छ।</p>
+        <h4 class="font-bold max-w-[100ch]">कम्पनीले निम्नलिखित बस्तु तथा क्षेत्रहरुमा आफ्नो ब्यापार र उद्योग संचालन
+          गर्न सक्ने छ ।</h4>
         <ol class="list-decimal list-outside pl-8 space-y-2">
           <li class="pl-2">दैनिक उपभोग्य खाद्यन्न किराना तथा गल्ला ।</li>
           <li class="pl-2">हल्का पेय पदार्थ तथा वेभरेज ।</li>
@@ -209,13 +207,32 @@
           <li class="pl-2">घर जग्गा तथा सम्पूर्ण रियल स्टेट सम्बन्धि काम हरु ।</li>
         </ol>
       </div>
-      <div class="space-y-4 mt-6 text-xl">
-        <p>विविध तथा व्यापक कार्य क्षेत्र भएको यस कम्पनीको सुरुवात एकल रूपमा मात्र २५०००००।- अक्षेरूपी पच्चीस लाख बाट भएता पनि देश तथा बिदेशमा बसोबास गर्ने सम्पूर्ण नेपालीजन बाट थोरै थोरै मात्रामा पुंजी संकलन गरि एउटा विशाल राष्ट्रिय पुंजिमा परिणत गर्ने र कर्मठ ईमानदार उद्योग ब्यापारमा रुचि राख्ने रास्ट्र प्रेमिजन हरुलाई कम्पनीको संचालक बनाई क्रमिक रुपमा नेपालको अग्रणी कम्पनी बन्ने विभिन्न प्रकारका रोजगारी सिर्जना गरि राज्यलाई आर्थिक बिकासमा सघाउने कम्पनीको प्रमुख लक्ष्य हो सम्पुर्ण नेपाली जन हरु को साझा कम्पनी बनाई राष्ट्रिय तथा अन्तर्राष्ट्रिय जगत मा ब्यापार ब्यवसाय गर्ने कम्पनीको सपना रहेकोे छ ।</p>
-        <p>आगामी आर्थिक बर्ष २०७८-७९ को मध्य सम्म कम्पनी को पुंजी वृद्धि गरि २.५ करोड पुर्याउने हाम्रो योजना रहेको छ । जनसमुदाय भेटघाट कार्यक्रम मार्फत प्रथम चरणमा हामी १०० जना संचालक साथी हरुलाई कम्पनीमा जोड्दै छौं । अत उद्योग ब्यापारमा रुचि राख्ने सामाजिक भावना तथा फराकिलो बिचार भएका ईमानदार कर्मठ नेपालीजन हरु हामी संग जोडिनका लागी सम्पर्कमा आउन सक्नुहुनेछ । सुरुका १०० जनाले कम्पनीको संस्थापक शेर प्राप्त गरि विविध उद्देश भएको बिशाल सपना बोकेको यस कम्पनीमा संचालन भई काम गर्न सक्नु हुनेछ ।</p>
-        <p>कम्पनीको योजना अनुसार दैनिक उपभोग्य खाद्यान्न तथा किनारा सामाग्री हरुको थोक ब्यापारमा स्थापना काल देखी हाल सम्म हाम्रो संलग्नता रह्यो रुपन्देही , नवलपरासी ,कपिलवस्तुका लगभग ४,५० देखि ५०० खुद्रा किराना व्यावसायिहरु संग हाम्रो निरन्तर ब्यापार हुँदै आएको छ ।चालु आर्थिक बर्ष को अन्त सम्म हाम्रो ब्यापारीक बार्षिक कारोबार लग भग ४देखी ५ करोड सम्म पुग्ने हाम्रो अनुमान छ । बिगत चार बर्ष को ब्यापारीक अनुभव अनुसार यस क्षेत्रमा ब्यापार गर्ने हाम्रो रुचि बढी रहेको छ अलिकति मेहनत र बडी लगानी भए पनि यस ब्यापारमा हामीले दिगोपन देख्यौं किनभने यो ब्यापार दैनिकी जीवन यापन संग जोडिएको छ जीवन रहे सम्म ब्यापार रहिरन्छ ।</p>
-        <p>तसर्थ बिगत चार बर्षको अध्यन अनुसन्धानको आधारमा थप लगानी ब्यबस्थापन टेक्नोलोजी प्रयोग गर्दै आगामी आर्थिक बर्ष २०७८-७९ को अन्त सम्म दैनिक उपभोग्य खाद्यान्न , गल्ला तथा किराना बस्तु हरुको एउटा बिशाल स्टोरको स्थापना गरि संचालन ल्याउने कम्पनीको तयारी रहेकोे छ । प्रथम चरणमा प्रदेश नं ५ बुटवल नगरीमा उक्त स्टोरको स्थापना हुनेछ र क्रमिक रुपमा विकसित गर्दै सातै प्रदेशमा पुर्याइने छ ।उक्त स्टोर बिश्वकर्मा ट्रेडिङ्ग को एक शंकाय रहनेछ ।</p>
+      <div class="space-y-4 mt-6 ">
+        <p>विविध तथा व्यापक कार्य क्षेत्र भएको यस कम्पनीको सुरुवात एकल रूपमा मात्र २५०००००।- अक्षेरूपी पच्चीस लाख बाट
+          भएता पनि देश तथा बिदेशमा बसोबास गर्ने सम्पूर्ण नेपालीजन बाट थोरै थोरै मात्रामा पुंजी संकलन गरि एउटा विशाल
+          राष्ट्रिय पुंजिमा परिणत गर्ने र कर्मठ ईमानदार उद्योग ब्यापारमा रुचि राख्ने रास्ट्र प्रेमिजन हरुलाई कम्पनीको
+          संचालक बनाई क्रमिक रुपमा नेपालको अग्रणी कम्पनी बन्ने विभिन्न प्रकारका रोजगारी सिर्जना गरि राज्यलाई आर्थिक
+          बिकासमा सघाउने कम्पनीको प्रमुख लक्ष्य हो सम्पुर्ण नेपाली जन हरु को साझा कम्पनी बनाई राष्ट्रिय तथा
+          अन्तर्राष्ट्रिय जगत मा ब्यापार ब्यवसाय गर्ने कम्पनीको सपना रहेकोे छ ।</p>
+        <p>आगामी आर्थिक बर्ष २०७८-७९ को मध्य सम्म कम्पनी को पुंजी वृद्धि गरि २.५ करोड पुर्याउने हाम्रो योजना रहेको छ ।
+          जनसमुदाय भेटघाट कार्यक्रम मार्फत प्रथम चरणमा हामी १०० जना संचालक साथी हरुलाई कम्पनीमा जोड्दै छौं । अत उद्योग
+          ब्यापारमा रुचि राख्ने सामाजिक भावना तथा फराकिलो बिचार भएका ईमानदार कर्मठ नेपालीजन हरु हामी संग जोडिनका लागी
+          सम्पर्कमा आउन सक्नुहुनेछ । सुरुका १०० जनाले कम्पनीको संस्थापक शेर प्राप्त गरि विविध उद्देश भएको बिशाल सपना
+          बोकेको यस कम्पनीमा संचालन भई काम गर्न सक्नु हुनेछ ।</p>
+        <p>कम्पनीको योजना अनुसार दैनिक उपभोग्य खाद्यान्न तथा किनारा सामाग्री हरुको थोक ब्यापारमा स्थापना काल देखी हाल
+          सम्म हाम्रो संलग्नता रह्यो रुपन्देही , नवलपरासी ,कपिलवस्तुका लगभग ४,५० देखि ५०० खुद्रा किराना व्यावसायिहरु संग
+          हाम्रो निरन्तर ब्यापार हुँदै आएको छ ।चालु आर्थिक बर्ष को अन्त सम्म हाम्रो ब्यापारीक बार्षिक कारोबार लग भग
+          ४देखी ५ करोड सम्म पुग्ने हाम्रो अनुमान छ । बिगत चार बर्ष को ब्यापारीक अनुभव अनुसार यस क्षेत्रमा ब्यापार गर्ने
+          हाम्रो रुचि बढी रहेको छ अलिकति मेहनत र बडी लगानी भए पनि यस ब्यापारमा हामीले दिगोपन देख्यौं किनभने यो ब्यापार
+          दैनिकी जीवन यापन संग जोडिएको छ जीवन रहे सम्म ब्यापार रहिरन्छ ।</p>
+        <p>तसर्थ बिगत चार बर्षको अध्यन अनुसन्धानको आधारमा थप लगानी ब्यबस्थापन टेक्नोलोजी प्रयोग गर्दै आगामी आर्थिक बर्ष
+          २०७८-७९ को अन्त सम्म दैनिक उपभोग्य खाद्यान्न , गल्ला तथा किराना बस्तु हरुको एउटा बिशाल स्टोरको स्थापना गरि
+          संचालन ल्याउने कम्पनीको तयारी रहेकोे छ । प्रथम चरणमा प्रदेश नं ५ बुटवल नगरीमा उक्त स्टोरको स्थापना हुनेछ र
+          क्रमिक रुपमा विकसित गर्दै सातै प्रदेशमा पुर्याइने छ ।उक्त स्टोर बिश्वकर्मा ट्रेडिङ्ग को एक शंकाय रहनेछ ।</p>
       </div>
-      <h4 class="font-bold mt-6 mb-2">यसैगरी क्रमिक रुपमा पुंजी वृद्धि गर्दै कम्पनी लाई पब्लिक लिमिटेडमा परिणत गरिने छ र उल्लेखित विभिन्न योजनाहरुको स्थापना र संचालन गरिदै लगिने छ । यस बि.के. पि स्टोरले आफ्नो वेबसाईट मार्फत आफ्न ग्राहक हरु लाई निम्न लिखित सेवा प्रदान गर्नेछ ।</h4>
+      <h4 class="font-bold mt-6 mb-2">यसैगरी क्रमिक रुपमा पुंजी वृद्धि गर्दै कम्पनी लाई पब्लिक लिमिटेडमा परिणत गरिने छ र
+        उल्लेखित विभिन्न योजनाहरुको स्थापना र संचालन गरिदै लगिने छ । यस बि.के. पि स्टोरले आफ्नो वेबसाईट मार्फत आफ्न
+        ग्राहक हरु लाई निम्न लिखित सेवा प्रदान गर्नेछ ।</h4>
       <ol class="list-decimal list-outside pl-8 space-y-2">
         <li class="pl-2">दैनिक उपभोग्य किराना सामाग्री हरुको अडर अनुसार सर्व सुलभ ढंगबाट डेलिभरी दिनेछ ।</li>
         <li class="pl-2">खाद्यान्न तथा गल्ला सामान हरुको अडर अनुसार सर्व सुलभ ढंगबाट डेलिभरी दिइनेछ ।</li>
@@ -223,11 +240,12 @@
         <li class="pl-2">नयाँ उत्पादन हरु लाई आफ्नो वेबसाईट मा राखी बिज्ञापन तथा ब्यापार ब्यबस्थापन गर्नेछ ।</li>
       </ol>
     </div>
-</section>
+  </section>
 
   <!-- footer section start -->
   <section class="pt-4 h-auto bg-black">
-    <footer class="max-w-5xl mx-auto  px-6 py-8 text-black-100 md:flex flex-wrap gap-4 flex-row justify-between items-start">
+    <footer
+      class="max-w-5xl mx-auto  px-6 py-8 text-black-100 md:flex flex-wrap gap-4 flex-row justify-between items-start">
       <div>
         <svg class="w-[140px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 39.6">
           <defs>
@@ -284,7 +302,8 @@
                 <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"></path>
                 <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"></path>
               </svg>
-              <a class="hover:text-brand-200 underline" href="mailto: administration@bkpnepal.com">administration@bkpnepal.com</a>
+              <a class="hover:text-brand-200 underline"
+                href="mailto: administration@bkpnepal.com">administration@bkpnepal.com</a>
             </p>
             <p class="flex space-x-4">
               <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -307,17 +326,22 @@
         <ul class="space-y-2 pt-4 text-black-100 text-lg">
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="/">Home</a>
           </li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="action-plan.html">Action
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="action-plan.html">Action
               Plan</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
-              href="membership-type.html">Membership Type</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="upcoming-projects.html">Upcoming
+              href="membership-type.html">Register</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="upcoming-projects.html">Upcoming
               Projects</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="about.html">About
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="about.html">About
               us</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="contact.html">Contact
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="contact.html">Contact
               us</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="login.html">Login</a></li>
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline "
+              href="login.html">Login</a></li>
         </ul>
       </div>
       <!-- end of footer sitemap -->
@@ -355,13 +379,15 @@
         <div class="mt-6">
           <h3 class="text-brand-500 mb-2 text-xl">Newsletter Signup</h3>
           <div>
-            <input class="rounded-sm bg-black-800 py-1 px-2 mr-2 focus:outline-none focus:ring-2 focus:ring-black-700 placeholder:text-sm"
+            <input
+              class="rounded-sm bg-black-800 py-1 px-2 mr-2 focus:outline-none focus:ring-2 focus:ring-black-700 placeholder:text-sm"
               type="email" name="newsletter-email" id="newsletter-email" placeholder="Your Email">
-            <button class="inline-block bg-black-800 hover:bg-brand-800  py-1 px-3 rounded mt-2" type="submit">Signup</button>
+            <button class="inline-block bg-black-800 hover:bg-brand-800  py-1 px-3 rounded mt-2"
+              type="submit">Signup</button>
           </div>
         </div>
         <!-- end newsletter signup -->
-      </div> 
+      </div>
       <!-- end of connect with us -->
 
     </footer>
@@ -385,11 +411,11 @@
   </section>
   <!-- footer section end -->
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js" type="module"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-      offset : 120,
+      offset: 120,
     });
   </script>
 
